<resources>
    <string name="app_name">Movie Show</string>
    <string name="tvMovies">Movies</string>
    <string name="tvShows">TV Shows</string>
    <string name="tvTitle">Title</string>
    <string name="tvRating">Rating</string>
    <string name="tvNetwork">Network</string>
    <string name="tvReleaseDate">Release Date</string>
    <string name="tvReleasedOn">Released on:</string>
    <string name="tvStartedOn">Started on:</string>
    <string name="tvStatus">Status</string>
    <string name="tvLanguage">Language</string>
    <string name="tvLoremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="tvBullet">\u2022</string>
    <string name="tvRuntime">Runtime</string>
    <string name="tvGenre">Genre</string>
    <string name="tvOtherMenus">Other Menu</string>
    <string name="tvShare">Share</string>
    <string name="tvOpenInBrowser">Open in browser</string>
    <string name="tvReadMore">Read More</string>
    <string name="tvReadLess">Read Less</string>
    <string name="tvPoster">Poster</string>
    <string name="tvBackdrop">Backdrop</string>
    <string name="tvWatchAlso">Watch Also</string>
    <string name="tvYear">(2021)</string>
    <string name="tvCancelDelete">Cancel delete?</string>
    <string name="tvYes">Yes</string>

    <string name="btnWebsites">Website</string>
    <string name="btnShare">Share</string>

    <!--Bottom menu-->
    <string name="icMovie">Movies</string>
    <string name="icTvShow">TV Shows</string>
    <string name="icFavorite">Favorites</string>
</resources>