<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.movie.activity.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/imgBackdrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@color/colorPrimary"
            android:contentDescription="@string/tvBackdrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPoster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="140dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toTopOf="@id/imgBackdrop"
            app:layout_constraintStart_toStartOf="@id/imgBackdrop">

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tvPoster"
                android:scaleType="centerCrop"
                tools:src="@drawable/ic_loading"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:text="@string/tvTitle"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/imgBackdrop"
            app:layout_constraintStart_toEndOf="@id/cardPoster"
            app:layout_constraintEnd_toEndOf="@id/tvOverview" />

        <TextView
            android:id="@+id/tvReleasedOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:text="@string/tvReleasedOn"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="@string/tvReleaseDate"
            android:textColor="@color/colorGrey"
            app:layout_constraintStart_toEndOf="@id/tvReleasedOn"
            app:layout_constraintTop_toTopOf="@id/tvReleasedOn"
            app:layout_constraintBottom_toBottomOf="@+id/tvReleasedOn" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textColor="@color/white"
            tools:text="@string/tvLoremIpsum"
            android:ellipsize="end"
            android:maxLines="4"
            app:layout_constraintTop_toBottomOf="@id/tvRating"
            app:layout_constraintStart_toStartOf="@id/cardPoster"/>

        <TextView
            android:id="@+id/tvReadMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:includeFontPadding="false"
            android:visibility="gone"
            android:text="@string/tvReadMore"
            android:textColor="@color/colorPrimaryAccent"
            app:layout_constraintStart_toStartOf="@id/cardPoster"
            app:layout_constraintTop_toBottomOf="@id/tvOverview"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            

        </LinearLayout>

        <TextView
            android:id="@+id/tvRatingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:includeFontPadding="false"
            android:textColor="@color/colorTextOther"
            android:textStyle="bold"
            android:textSize="12sp"
            android:text="@string/tvRating"
            app:layout_constraintTop_toBottomOf="@id/cardPoster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imgRating"
            app:layout_constraintHorizontal_bias="0.75"/>

        <ImageView
            android:id="@+id/imgRating"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/tvRating"
            android:src="@drawable/ic_rate"
            app:tint="@color/colorTextOther"
            app:layout_constraintStart_toEndOf="@id/tvRatingTitle"
            app:layout_constraintTop_toTopOf="@id/tvRatingTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvRatingTitle"
            app:layout_constraintEnd_toEndOf="@id/tvLanguageTitle"
            app:layout_constraintHorizontal_bias="0.01"/>

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:includeFontPadding="false"
            android:textColor="@color/colorTextIcons"
            android:textSize="12sp"
            tools:text="@string/tvRating"
            app:layout_constraintTop_toBottomOf="@id/tvRatingTitle"
            app:layout_constraintStart_toStartOf="@id/tvRatingTitle"
            app:layout_constraintEnd_toEndOf="@id/imgRating"/>

        <TextView
            android:id="@+id/tvLanguageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:includeFontPadding="false"
            android:textColor="@color/colorTextOther"
            android:textStyle="bold"
            android:textSize="12sp"
            android:text="@string/tvLanguage"
            app:layout_constraintTop_toTopOf="@id/tvRatingTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvRatingTitle"
            app:layout_constraintStart_toEndOf="@id/imgRating"
            app:layout_constraintEnd_toEndOf="@id/imgLanguage"
            app:layout_constraintHorizontal_bias="0.87"/>

        <ImageView
            android:id="@+id/imgLanguage"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/tvLanguage"
            android:src="@drawable/ic_language"
            app:tint="@color/colorTextOther"
            app:layout_constraintTop_toTopOf="@id/tvRatingTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvRatingTitle"
            app:layout_constraintStart_toEndOf="@id/tvLanguageTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"/>

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:includeFontPadding="false"
            android:textColor="@color/colorTextIcons"
            android:textSize="12sp"
            tools:text="@string/tvLanguage"
            app:layout_constraintTop_toBottomOf="@id/tvLanguageTitle"
            app:layout_constraintStart_toStartOf="@id/tvLanguageTitle"
            app:layout_constraintEnd_toEndOf="@id/imgLanguage"/>

        <Button
            android:id="@+id/btnWebsite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="12dp"
            tools:text="@string/btnWebsites"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorOrange"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvOverview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>